WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
17107
REGRESSION(
r29834
): Article text on redhat.com magazine site appears to be painting twice
https://bugs.webkit.org/show_bug.cgi?id=17107
Summary
REGRESSION(r29834): Article text on redhat.com magazine site appears to be pa...
Mark Rowe (bdash)
Reported
2008-01-30 18:03:01 PST
When comparing the text rendering on
http://www.redhat.com/magazine/009jul05/features/execshield/
between Safari 3 and TOT, it is clear that TOTs rendering is much bolder. It seems like the text may be being painted twice. Bisecting the revision history with git revealed that the problem originates with <
http://trac.webkit.org/projects/webkit/changeset/29834
>.
Attachments
Reduction
(127 bytes, text/html)
2008-01-30 18:03 PST
,
Mark Rowe (bdash)
no flags
Details
Avoid making blocks paint floats that intrude into them
(42.27 KB, patch)
2008-01-30 19:15 PST
,
mitz
no flags
Details
Formatted Diff
Diff
Avoid making blocks paint floats that intrude into them
(46.17 KB, patch)
2008-01-30 22:24 PST
,
mitz
hyatt
: review+
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Mark Rowe (bdash)
Comment 1
2008-01-30 18:03:45 PST
Created
attachment 18806
[details]
Reduction
Mark Rowe (bdash)
Comment 2
2008-01-30 18:04:22 PST
<
rdar://problem/5716722
>
mitz
Comment 3
2008-01-30 19:15:03 PST
Created
attachment 18807
[details]
Avoid making blocks paint floats that intrude into them
Sam Weinig
Comment 4
2008-01-30 19:41:56 PST
; in that case...??? You sir, have a case of sentence truncation!
mitz
Comment 5
2008-01-30 21:27:45 PST
Comment on
attachment 18807
[details]
Avoid making blocks paint floats that intrude into them Sam also pointed out that the isDescendantOf() can be expensive. I think I can avoid it in most cases.
mitz
Comment 6
2008-01-30 22:24:20 PST
Created
attachment 18809
[details]
Avoid making blocks paint floats that intrude into them
mitz
Comment 7
2008-01-31 10:25:55 PST
***
Bug 17117
has been marked as a duplicate of this bug. ***
Dave Hyatt
Comment 8
2008-01-31 10:32:48 PST
Comment on
attachment 18809
[details]
Avoid making blocks paint floats that intrude into them r=me
mitz
Comment 9
2008-01-31 10:36:48 PST
Fixed in <
http://trac.webkit.org/projects/webkit/changeset/29885
>.
Mark Rowe (bdash)
Comment 10
2008-01-31 10:50:39 PST
***
Bug 17120
has been marked as a duplicate of this bug. ***
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug