WebCore:

Reviewed by Dave Hyatt.

        - fix http://bugs.webkit.org/show_bug.cgi?id=17107
          <rdar://problem/5716722> REGRESSION (r29834): Article text on redhat.com magazine site appears to be painting twice

        Test: fast/block/float/intruding-painted-twice.html

        * rendering/RenderBlock.cpp:
        (WebCore::RenderBlock::layoutBlock): Pass 'false' for the new
        makeChildPaintOtherFloats parameter to addOverhangingFloats() because at
        this point we are only taking away floats from the child.
        (WebCore::RenderBlock::layoutBlockChildren): Pass 'true' for the new
        makeChildPaintOtherFloats parameter to addOverhangingFloats() iff the
        child was not laid out again. Only in that case, it may have overhanging
        floats that it does not paint because they used to be overhanging from
        the parent, but now they are not.
        (WebCore::RenderBlock::addOverhangingFloats): Refined the conditions for
        making the child paint the float: require that the float be a descendant
        of the child (the other case is when it intrudes into the child from
        another sibling) and that it does not have a layer (in which case it
        paints itself). In addition, do the check only if the caller passed
        'true' for the makeChildPaintOtherFloats parameter.
        * rendering/RenderBlock.h:

LayoutTests:

        Reviewed by Dave Hyatt.

        - pixel test for http://bugs.webkit.org/show_bug.cgi?id=17107
          <rdar://problem/5716722> REGRESSION (r29834): Article text on redhat.com magazine site appears to be painting twice

        * fast/block/float/intruding-painted-twice.html: Added.
        * platform/mac-leopard/fast/block/float/intruding-painted-twice-expected.checksum: Added.
        * platform/mac-leopard/fast/block/float/intruding-painted-twice-expected.png: Added.
        * platform/mac/fast/block/float/intruding-painted-twice-expected.txt: Added.



Canonical link: https://commits.webkit.org/23707@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@29885 268f45cc-cd09-0410-ab3c-d52691b4dbfc